removed unnecessary prod config and cleaned up a bit, hot reloading doesn't seem to work

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>web-snake-react-bacon</title>
-  <link rel="stylesheet" href="/style.css" charset="utf-8">
+  <link rel="stylesheet" href="/static/style.css" charset="utf-8">
 </head>
 <body>
   <div id="app"></div>
-  <script src="/app.js"></script>
+  <script src="/static/bundle.js"></script>
 </body>
 </html>
